# swig_example

./: CMakeLists.txt  cpp_side.cpp  cpp_side.h  py_side.py
